# tg_userbot_tester

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/tg_userbot_tester.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/userbot_tester/: cache_sqlite.py  cli.py  config.py  excel_batch.py  logging_setup.py  main.py  mtproto.py  proxy_bot.py  runner.py
src/userbot_tester/scenarios/: base.py  demo_dialog.py
